<resources>
	<string name="app_name">Cryptovalise</string>
	<string name="title_coin_detail">Coin Detail</string>
	<string name="coin_list_icon_description">Coin logo</string>
	<string name="coin_list_more_description">More</string>
	<string name="delta_1h">1h %</string>
	<string name="delta_7d">7d %</string>
	<string name="delta_24h">24h %</string>
	<string name="title_activity_coin">Coins</string>
	<string name="add_coin_toolbar">Add coin</string>
	<string name="add_coin_title">Choose a coin</string>
	<string name="add_coin_emptymsg">No more coins are available</string>
	<string name="add_coin_done">Added %1$s</string>
	<string name="add_coin_undone">Removed %1$s</string>
	<string name="coin_detail_missing_description">No description</string>
	<string name="coin_detail_copy_logo">Copy</string>
	<string name="coin_detail_copy_logo_done">Logo copied to the clipboard</string>
	<string name="coin_detail_cap_title">Market Cap $</string>
	<string name="coin_detail_vol_title">24h Volume $</string>
	<string name="coin_detail_supply">Available: %1$s</string>
	<string name="coin_detail_supply_total">Total: %1$s</string>
	<string name="coin_detail_supply_total_unlimited">Unlimited supply</string>
	<string name="coin_detail_rank">Rank: #%1$d</string>
	<string name="coin_detail_dominance_title">Dominance</string>
	<string name="coin_detail_cmc_credit">CoinMarketCap Data</string>
	<string name="coin_menu_delete">Delete</string>
	<string name="coin_share_delete">Share</string>
	<string name="close">Close</string>
	<string name="undo">Undo</string>
	<string name="coin_detail_links_visit">Visit</string>
	<string name="coin_detail_links_whitepaper">Read Whitepaper</string>
	<string name="coin_detail_links_none">None</string>
	<string name="coin_detail_links_whitepaper_title">Whitepaper</string>
	<string name="coin_detail_links_title">Website</string>
	<string name="transition_title">transitionTitle</string>
	<string name="transition_content">transitionContent</string>
	<string name="transition_logo">transitionLogo</string>
	<string name="coin_menu_user_guide">User Guide</string>
	<string name="error_no_network">No network available</string>
	<string name="error_no_network_action">Refresh</string>
</resources>
