<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	app:layout_constraintTop_toTopOf="parent"
	app:layout_constraintStart_toStartOf="parent"
	android:layout_marginBottom="0dp"
	android:layout_marginTop="@dimen/text_margin"
	android:layout_marginStart="@dimen/text_margin"
	android:layout_marginEnd="@dimen/text_margin"
	android:foreground="?android:attr/selectableItemBackground"
	android:clickable="true"
	android:focusable="true">

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		tools:layout_editor_absoluteY="8dp"
		tools:layout_editor_absoluteX="8dp"
		android:background="@color/cardview_light_background">

		<ProgressBar
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:id="@+id/progressBar"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:max="100"
			android:visibility="visible"
			android:minHeight="4dp"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/symbol"
			android:layout_marginTop="12dp"
			app:layout_constraintTop_toTopOf="parent"
			tools:text="symbol"
			app:layout_constraintStart_toStartOf="@+id/coinName"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/coinName"
			app:layout_constraintTop_toBottomOf="@+id/symbol"
			tools:text="Coin Name"
			android:textSize="30sp"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="16dp"
			/>

		<ImageView
			android:layout_width="32dp"
			android:layout_height="32dp"
			android:id="@+id/icon"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="16dp"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="16dp"
			android:scaleType="fitXY"
			android:contentDescription="@string/coin_list_icon_description"
			tools:srcCompat="@drawable/ic_attach_money_black_24dp"
			android:transitionName="@string/transition_logo"/>

		<include
			layout="@layout/include_coin_prices"
			android:layout_height="wrap_content"
			android:layout_width="0dp"
			app:layout_constraintTop_toBottomOf="@id/coinName"
			android:layout_marginTop="16dp"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="16dp"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_marginBottom="12dp"
			app:layout_constraintEnd_toStartOf="@+id/buttonMore"
			android:layout_marginEnd="8dp"/>

		<ImageButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:srcCompat="@drawable/ic_more_vert_black_24dp"
			android:id="@+id/buttonMore"
			android:background="?android:attr/selectableItemBackgroundBorderless"
			app:layout_constraintEnd_toEndOf="parent"
			android:tint="@android:color/darker_gray"
			android:contentDescription="@string/coin_list_more_description"
			android:padding="12dp"
			app:layout_constraintBottom_toBottomOf="parent"
			/>

	</android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
